#cargo-features = ["profile-rustflags"]

[package]
name = "res"
version = "0.1.0"
authors = ["Steven Cole <scole66@gmail.com>"]
edition = "2024"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
#nursery = "deny"
#unwrap_used = "deny"
#allow-unwrap-in-tests = true
large_stack_arrays = "allow"  # Really only for debug builds. (I think the list of testcases goes into a stack array.)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
num = { version = "0.4", features = ["num-bigint"] }
libc = "0.2"
itertools = "0.10.0"
ahash = "0.7.2"
lazy_static = "1.4.0"
regex = "1"
uid = "0.1.5"
counter = "0.5.3"
anyhow = "1.0.56"
num_enum = "0.5.7"
bimap = "0.6.2"
non-empty-vec = "0.2.3"
genawaiter = "0.99.1"
futures = "0.3.28"
yaml-rust = "0.4.5"
color-eyre = "0.6.2"
tempfile = "3.9.0"
clap = { version = "4.4.12", features = ["derive"] }
rand = "0.8.5"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["formatting", "large-dates", "local-offset", "std", "macros"]}
multi-map = "1.3.0"
config = "0.14.1"

[dev-dependencies]
test-case = "2.0"
unicode-intervals = "0.2"

[profile.coverage]
inherits = "dev"
#rustflags = [ "-Cinstrument-coverage" ]

[profile.bacon]
inherits = "dev"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
