#cargo-features = ["profile-rustflags"]

[package]
name = "res"
version = "0.1.0"
authors = ["Steven Cole <scole66@gmail.com>"]
edition = "2024"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
#nursery = "deny"
#unwrap_used = "deny"
#allow-unwrap-in-tests = true
large_stack_arrays = "allow"  # Really only for debug builds. (I think the list of testcases goes into a stack array.)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.2"

[dependencies]
num = { version = "0.4", features = ["num-bigint"] }
libc = "0.2"
itertools = "0.10.5"
ahash = "0.7.8"
lazy_static = "1.5.0"
regex = "1"
uid = "0.1.8"
counter = "0.5.7"
anyhow = "1.0.97"
num_enum = "0.5.11"
bimap = "0.6.3"
non-empty-vec = "0.2.3"
genawaiter = "0.99.1"
futures = "0.3.31"
yaml-rust = "0.4.5"
color-eyre = "0.6.3"
tempfile = "3.19.1"
clap = { version = "4.5.32", features = ["derive"] }
rand = "0.8.5"
thiserror = "1.0.69"
time = { version = "0.3.41", features = ["formatting", "large-dates", "local-offset", "std", "macros"]}
multi-map = "1.3.0"
config = "0.14.1"
once_cell = "1.21.3"

[dev-dependencies]
test-case = "2.2"
unicode-intervals = "0.2"

[profile.coverage]
inherits = "dev"
#rustflags = [ "-Cinstrument-coverage" ]

[profile.bacon]
inherits = "dev"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
